--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,40 @@
+<p id="notice"><%=  notice %> </p>
 <h1>Books</h1>
 <table>
   <tr><th>Title</th><th>Body</th></tr>
   <% @books.each do |book| %>
-  <tr><td><%= book.title %></td><td><%= book.body %></td><td><%= link_to "Show", book_path(book.id) %></td><td>Edit</td><td>Destroy</td></tr>
+  <tr>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+    <td><%= link_to "Show", book_path(book.id) %></td>
+    <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+    <td><%= link_to "Destroy", "/books/#{book.id}", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+  </tr>
   <% end %>
 </table>
+
+<!--以下new.html.erb-->
+<h1>New book</h1>
+
+<div>
+  <% if @book.errors.any? %>
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
+
+<%= form_with model:@book, local:true do |f| %>
+
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+
+<% end %>
