--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,13 +1,24 @@
-<h1>New book</h1>
+<!--<h1>New book</h1>-->
 
-<%= form_with model:@book, local:true do |f| %>
+<!--<div>-->
+<!--  <% if @book.errors.any? %>-->
+<!--    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>-->
+<!--    <ul>-->
+<!--      <% @book.errors.full_messages.each do |message| %>-->
+<!--        <li><%= message %></li>-->
+<!--      <% end %>-->
+<!--    </ul>-->
+<!--  <% end %>-->
+<!--</div>-->
 
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+<!--<%= form_with model:@book, local:true do |f| %>-->
 
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+<!--  <h4>Title</h4>-->
+<!--  <%= f.text_field :title %>-->
 
-  <%= f.submit 'Create Book' %>
+<!--  <h4>Body</h4>-->
+<!--  <%= f.text_area :body %>-->
 
-<% end %>
+<!--  <%= f.submit 'Create Book' %>-->
+
+<!--<% end %>-->
